# mvp

./: LICENSE  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  admin.py  campaigns.py  creators.py  streams.py  wallet.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  campaigns.py  creators.py  streams.py  wallet.py
backend/app/services/: __init__.py  admin.py  campaigns.py  creators.py  streams.py  wallet.py
docs/: architecture.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/ai/: page.tsx
frontend/app/campaigns/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/live/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/charts/: sparkline.tsx
frontend/components/dashboard/: leaderboard-table.tsx  mission-timeline.tsx  stream-feed.tsx
frontend/components/layout/: app-shell.tsx  sidebar.tsx  topbar.tsx
frontend/components/ui/: card.tsx
frontend/src/lib/: api.ts
